[gd_scene load_steps=4 format=2]

[ext_resource path="res://Level1.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.40625, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
fill_from = Vector2( 0.0125, 0 )

[node name="Level1" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 384, 512 )
scale = Vector2( 12, 16 )
texture = SubResource( 2 )

[node name="Images" type="Node2D" parent="."]

[node name="Image1" type="Sprite" parent="Images"]
position = Vector2( 160, 320 )

[node name="Image2" type="Sprite" parent="Images"]
position = Vector2( 384, 320 )

[node name="Image3" type="Sprite" parent="Images"]
position = Vector2( 608, 320 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -72.0
margin_right = 88.0
margin_bottom = -41.0
text = "Welcome to Level 1!
Press ESC to return to Map"
fit_content_height = true

[node name="BtnNext" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = 56.0
margin_right = -62.0
margin_bottom = 76.0
text = ">"

[node name="BtnPrevious" type="Button" parent="CanvasLayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = 56.0
margin_right = 106.0
margin_bottom = 76.0
text = "<"

[connection signal="pressed" from="CanvasLayer/BtnNext" to="." method="_on_BtnNext_pressed"]
[connection signal="pressed" from="CanvasLayer/BtnPrevious" to="." method="_on_BtnPrevious_pressed"]
